--- a/index.html
+++ b/index.html
@@ -12,11 +12,47 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <script src="js/main.js"></script>
+    <section class="hero is-medium is-dark is-bold">
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">Crypto Tracker</h1>
+          <h2 class="subtitle">
+            Ostanite u toku sa desavanjima na polju kripto valuta.
+          </h2>
+        </div>
+      </div>
+    </section>
+    <!-- Postovi -->
+    <section class="section">
+      <div class="container">
+        <h1 class="title">Novosti</h1>
+        <h2 class="subtitle">
+          Izvor
+          <a href="https://www.cryptocompare.com"
+            >https://www.cryptocompare.com</a
+          >
+        </h2>
+        <div class="columns posts is-multiline">
+          <div class="column post is-one-third box">
+            <h2 class="title is-5">Lorem, ipsum.</h2>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p>
+          <strong>Crypto Novosti</strong> by
+          <a href="https://jgthms.com">Jakša Mališić</a> 298/18, Visoka ICT,
+          Beograd 2018.
+        </p>
+      </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
     ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
